dataset1235/2025-2/2947369575/users/1936540434/executions/1003782500_2819779400.log
== RUN (2025-08-27 22:48:18)
-- CODE: 
jogos = int(input("Quantidade de jogos a serem encomendados:" ))
valorjogo = float(input("Valor de cada jogo?" ))
frete = float(input("Frete:" ))

total = ((jogos*valorjogo)+frete)

print (total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem encomendados:Valor de cada jogo?Frete:1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem encomendados:Valor de cada jogo?Frete:240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem encomendados:Valor de cada jogo?Frete:540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem encomendados:Valor de cada jogo?Frete:765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem encomendados:Valor de cada jogo?Frete:162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem encomendados:Valor de cada jogo?Frete:618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:47:44)
-- CODE: 
jogos = int(input("Quantidade de jogos a serem encomendados:" ))
valorjogo = float(input("Valor de cada jogo?" ))
frete = float(input("Frete:" ))

total ((jogos*valorjogo)+frete)

print (total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total ((jogos*valorjogo)+frete)
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total ((jogos*valorjogo)+frete)
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total ((jogos*valorjogo)+frete)
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total ((jogos*valorjogo)+frete)
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total ((jogos*valorjogo)+frete)
    ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total ((jogos*valorjogo)+frete)
    ^^^^^
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:48:24)
-- CODE: 
jogos = int(input("Quantidade de jogos a serem encomendados:" ))
valorjogo = float(input("Valor de cada jogo?" ))
frete = float(input("Frete:" ))

total = ((jogos*valorjogo)+frete)

print (total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem encomendados:Valor de cada jogo?Frete:1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem encomendados:Valor de cada jogo?Frete:240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem encomendados:Valor de cada jogo?Frete:540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem encomendados:Valor de cada jogo?Frete:765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem encomendados:Valor de cada jogo?Frete:162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem encomendados:Valor de cada jogo?Frete:618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
